force-app/main/default/objects/R360_Work_Calendar__c/R360_Work_Calendar__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Effective-dated work pattern and daily capacity calendar.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Work Calendar</label><nameField><type>Text</type><label>Calendar Name</label></nameField><pluralLabel>Resource 360 Work Calendars</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>