force-app/main/default/objects/R360_Work_Calendar__c/fields/Calendar_ID__c.field-meta.xml
<CustomField><fullName>Calendar_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Calendar ID</label><length>60</length><required>true</required><type>Text</type><unique>true</unique></CustomField>