force-app/main/default/objects/R360_Work_Calendar__c/fields/Current__c.field-meta.xml
<CustomField><fullName>Current__c</fullName><defaultValue>true</defaultValue><label>Current</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>