force-app/main/default/objects/R360_Work_Calendar__c/fields/Daily_Capacity_Hours__c.field-meta.xml
<CustomField><fullName>Daily_Capacity_Hours__c</fullName><defaultValue>8</defaultValue><label>Daily Capacity Hours</label><precision>4</precision><required>true</required><scale>2</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>