force-app/main/default/objects/R360_Work_Calendar__c/fields/Time_Zone__c.field-meta.xml
<CustomField><fullName>Time_Zone__c</fullName><defaultValue>'Asia/Kolkata'</defaultValue><label>Time Zone</label><length>80</length><required>true</required><type>Text</type></CustomField>