force-app/main/default/objects/R360_Work_Calendar__c/fields/Work_Days__c.field-meta.xml
<CustomField><fullName>Work_Days__c</fullName><defaultValue>'1,2,3,4,5'</defaultValue><description>ISO weekday numbers, Monday=1 through Sunday=7.</description><label>Work Days</label><length>20</length><required>true</required><type>Text</type></CustomField>